delete_user, aggiunti test
